<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelPal</string>
    <string name="action_settings">Settings</string>
    
    <string-array name="activity_titles">
        <item>Home</item>
        <item>My Trips</item>
        <item>New Trip</item>
        <item>Find Friends</item>
        <item>Me</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="check">Check</string>
	<string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="send">Send</string>
    <string name="server">Server</string>
    <string name="ok">OK</string>
    
    <!-- menu -->
    <string name="dis_connect">Connect/Disconnect</string>
    <string name="dialog_title_subscribe">Title</string>
    <string name="dialog_message_subscribe">Please input what topic you want to subscribe:</string>
    <string name="dialog_message_server">Please input the server IP:</string>
    
    <!-- Log in page -->
    <string name="login">Log in</string>
    <!-- Create account page -->
    <string name="create_account">Create account</string>
    
    <!-- New trip -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="destination">Destination:</string>
    <string name="start_date">Start date: </string>
    <string name="end_date">End date: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    
    <!-- My trip -->
    <string name="create_feed">Click to write new details of the trip!</string>
    <string name="create_comment">Send</string>
    <string name="see_comment">See comment</string>
    
</resources>
