<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical">
    
   <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <Button 
	        android:id="@+id/main_connect_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/connect"/>
        
        <Button 
	        android:id="@+id/main_subscribe_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subscribe"/>
       
    </LinearLayout>
    
    <EditText 
        android:id="@+id/main_publish_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    
    <Button 
        android:id="@+id/main_publish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"/>
    
    <TextView
        android:id="@+id/main_push_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <Button 
	        android:id="@+id/main_check_connection_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check"/>
        
        <TextView
            android:id="@+id/main_check_connection_txt"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/not_connected"/>
       
    </LinearLayout>

</LinearLayout>
